--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Web Design Cource in Pune</title>
-  <link rel="StyleSheet" href="style.css">
+  <link rel="StyleSheet" href="css/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
   <link rel="icon" href="">
@@ -22,10 +22,10 @@
 
 </head>
 
-<body>
+<body class="xyzd">
   <!-- header -->
   <section class="header-section ">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary position-sticky">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary top-sticky">
       <div class="container">
         <a class="navbar-brand" href="#">
           <img src="img/logo.1.png" class="img-fluid" style="width: ; height: 40px;" alt="">
@@ -38,19 +38,19 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
           <ul class="navbar-nav menu-navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#home">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#services">Services</a>
+              <a class="nav-link" href="services.html">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#team"> Our Team</a>
+              <a class="nav-link" href="our team.html"> Our Team</a>
             </li>
             <li class="nav-item mt-3 mt-lg-0">
-              <a class="nav-link" href="#contact">Contact Us</a>
+              <a class="nav-link" href="contact us.html">Contact Us</a>
             </li>
 
 
@@ -108,11 +108,10 @@
 
     </div>
   </section>
+<p>sddfdfdfdfdfdfdfdf</p>
 
-
-
- <!-- -----footer---- -->
- <div class="row justify-content-evenly bg-dark text-light pt-5 pb-5">
+  <!-- -----footer---- -->
+  <div class="row justify-content-evenly bg-dark text-light pt-5 pb-5">
     <div class="col-md-3 pt-4">
       <h4 class="pb-2">Latest News</h4>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat dicta quo a temporibus quae provident
