--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Web Design Cource in Pune</title>
-  <link rel="StyleSheet" href="style.css">
+  <link rel="StyleSheet" href="css/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
   <link rel="icon" href="">
@@ -22,10 +22,10 @@
 
 </head>
 
-<body>
+<body class="xyzd">
   <!-- header -->
   <section class="header-section ">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary top-sticky">
+    <nav class="navbar navbar-expand-lg ">
       <div class="container">
         <a class="navbar-brand" href="#">
           <img src="img/logo.1.png" class="img-fluid" style="width: ; height: 40px;" alt="">
