--- a/about.html
+++ b/about.html
@@ -25,9 +25,9 @@
 <body class="xyzd">
   <!-- header -->
   <section class="header-section ">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary top-sticky">
+    <nav class="navbar navbar-expand-lg ">
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
           <img src="img/logo.1.png" class="img-fluid" style="width: ; height: 40px;" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -108,7 +108,7 @@
 
     </div>
   </section>
-<p>sddfdfdfdfdfdfdfdf</p>
+
 
   <!-- -----footer---- -->
   <div class="row justify-content-evenly bg-dark text-light pt-5 pb-5">
@@ -137,6 +137,34 @@
        <a href="" class="link-light text-decoration-none"><span><i class="fa-solid fa-envelope pe-3"></i> </span><span class="">shaikhsaddamssk@gmail.com</span>
        </a>
     </div>
+  </div>
+
+   <!--------contact----  -->
+
+
+   <div class="row justify-content-evenly pt-2 pb-3  text-light" id="contact" style="background-color: #0d0808;">
+    <div class="col-md-6 mt-5">
+      <!-- -----forms--- -->
+      <h3 class="mb-3">Contact Form</h3>
+      <form>
+        <div class="mb-3">
+          <label for="name" class="form-label">Full Name</label>
+          <input type="text" class="form-control" id="name" required>
+        </div>
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Email address</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
+          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+        </div>
+
+        <div class="mb-3">
+          <label for="exampleFormControlTextarea1" class="form-label">Massage</label>
+          <textarea class="form-control" id="exampleFormControlTextarea1" cols="1" rows="3"></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    </div>
+   
   </div>
   <!-- copyright -->
   <div class="row justify-content-evenly text-center pt-4 pb-4 text-light bg-secondary">
