--- a/contact us.html
+++ b/contact us.html
@@ -25,9 +25,9 @@
 <body class="xyzd">
   <!-- header -->
   <section class="header-section ">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary top-sticky">
+    <nav class="navbar navbar-expand-lg ">
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
           <img src="img/logo.1.png" class="img-fluid" style="width: ; height: 40px;" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -108,7 +108,46 @@
 
     </div>
   </section>
-<p>sddfdfdfdfdfdfdfdf Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum quae minus vero, culpa atque id nesciunt sit harum eum quibusdam voluptates deleniti excepturi modi fugiat! Exercitationem a necessitatibus voluptatem recusandae!</p>
+
+  <!--------contact----  -->
+
+
+  <div class="row justify-content-evenly pt-2 pb-3  " id="contact" style="background-color: #f1f1f1;">
+    <div class="col-md-5 mt-5">
+      <!-- -----forms--- -->
+      <h3 class="mb-3">Contact Form</h3>
+      <form>
+        <div class="mb-3">
+          <label for="name" class="form-label">Full Name</label>
+          <input type="text" class="form-control" id="name" required>
+        </div>
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Email address</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
+          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+        </div>
+
+        <div class="mb-3">
+          <label for="exampleFormControlTextarea1" class="form-label">Massage</label>
+          <textarea class="form-control" id="exampleFormControlTextarea1" cols="1" rows="3"></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    </div>
+    <div class="col-md-5 mt-5">
+      <!-- -----map---- -->
+      <h3 class="mb-4">Address</h3>
+      <p> ssk Building Above <br> Back of SBI Opposite <br> TO Pune Station Rd, Pune, <br> Maharashtra 11005 <br>
+        <i class="bi bi-telephone"></i> :123-789-6563
+      </p>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d484236.72238706116!2d73.58276900292212!3d18.524410051690644!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2bf2e67461101%3A0x828d43bf9d9ee343!2sPune%2C%20Maharashtra!5e0!3m2!1sen!2sin!4v1674108004979!5m2!1sen!2sin"
+        style="width: 100%;" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+    </div>
+  </div>
+
 
   <!-- -----footer---- -->
   <div class="row justify-content-evenly bg-dark text-light pt-5 pb-5">
