--- a/our team.html
+++ b/our team.html
@@ -25,9 +25,9 @@
 <body class="xyzd">
   <!-- header -->
   <section class="header-section ">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary top-sticky">
+    <nav class="navbar navbar-expand-lg ">
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
           <img src="img/logo.1.png" class="img-fluid" style="width: ; height: 40px;" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -108,8 +108,20 @@
 
     </div>
   </section>
-<p>sddfdfdfdfdfdfdfdf</p>
-shdfdfdkfjldfj
+
+
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat delectus vitae cupiditate inventore nostrum beatae rerum doloremque quasi soluta vel rem, culpa provident, dolores error nam hic tempore accusantium facilis?
+  Ipsa repudiandae quia quisquam ipsum. Itaque aliquam quidem expedita iusto voluptas neque cupiditate aliquid facere eos, maxime earum enim necessitatibus quas, accusantium tempore consectetur et quam nesciunt ex praesentium nam.
+  Deleniti harum natus temporibus quibusdam debitis nisi doloribus eligendi dignissimos nesciunt molestiae, reprehenderit facere amet? Ea accusantium aperiam quaerat hic, eveniet error culpa rem at qui. Maiores optio consequatur eaque.
+  Minus corporis soluta laborum ea tempora cum itaque ullam qui? Architecto illum porro nobis perspiciatis nihil sed ullam amet obcaecati rerum veniam quod dicta aperiam consequuntur voluptatem, praesentium asperiores fugit.
+  Explicabo ipsa voluptatum at, sit dolorum nesciunt omnis consequatur laudantium tempora optio aspernatur libero id iusto corporis repellendus maxime est provident laborum quas! Sunt eaque illo quaerat a adipisci ducimus.
+  A accusantium, inventore minus omnis ea perspiciatis adipisci, mollitia minima, corporis enim aperiam eveniet tempore. Non, saepe necessitatibus, suscipit deleniti laudantium dolores magnam ipsa, provident quas aliquam quidem perferendis officia.
+  Vel, officia nulla? Itaque ipsum assumenda, perspiciatis commodi, dolores ut quia dolorum enim voluptate quidem nesciunt. Eum cum ipsum nobis debitis corporis, maiores quisquam dolorem, aperiam quasi, aliquam a. Repudiandae.
+  Iure ducimus corrupti asperiores fuga voluptates reprehenderit quod? Nam, ducimus nostrum! Possimus sed, vero tenetur modi aspernatur eos totam dolor architecto nisi accusamus nam illo, et eligendi assumenda, veritatis quaerat.
+  Odit minus adipisci libero iste inventore exercitationem veniam, illo delectus commodi voluptatibus dolores animi ea dolorem maiores, qui fugiat temporibus. Eos tenetur inventore animi dolores necessitatibus debitis. Tenetur, quae aliquid.
+  Suscipit dolores ipsam excepturi sit amet sint laudantium enim neque quo quibusdam, mollitia veniam asperiores natus sunt fugit facilis, ipsa, quod aperiam. Id magni, pariatur facere ipsum tempora perferendis provident!
+
+
   <!-- -----footer---- -->
   <div class="row justify-content-evenly bg-dark text-light pt-5 pb-5">
     <div class="col-md-3 pt-4">
