--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <section class="header-section ">
     <nav class="navbar navbar-expand-lg ">
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
           <img src="img/logo.1.png" class="img-fluid" style="width: ; height: 40px;" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -302,6 +302,7 @@
            </a>
         </div>
       </div>
+      
       <!-- copyright -->
       <div class="row justify-content-evenly text-center pt-4 pb-4 text-light bg-secondary">
         <div class="col-md-10">
