--- a/services.html
+++ b/services.html
@@ -25,9 +25,9 @@
 <body class="xyzd">
   <!-- header -->
   <section class="header-section ">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary top-sticky">
+    <nav class="navbar navbar-expand-lg ">
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
           <img src="img/logo.1.png" class="img-fluid" style="width: ; height: 40px;" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -108,8 +108,7 @@
 
     </div>
   </section>
-<p>sddfdfdfdfdfdfdfdf</p>
-shaikh skjkdjfjdf kjdfdk f;
+
 
   <!-- -----footer---- -->
   <div class="row justify-content-evenly bg-dark text-light pt-5 pb-5">
