--- a/our team.html
+++ b/our team.html
@@ -110,7 +110,8 @@
   </section>
 
 
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat delectus vitae cupiditate inventore nostrum beatae rerum doloremque quasi soluta vel rem, culpa provident, dolores error nam hic tempore accusantium facilis?
+  <div class="container">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat delectus vitae cupiditate inventore nostrum beatae rerum doloremque quasi soluta vel rem, culpa provident, dolores error nam hic tempore accusantium facilis?
   Ipsa repudiandae quia quisquam ipsum. Itaque aliquam quidem expedita iusto voluptas neque cupiditate aliquid facere eos, maxime earum enim necessitatibus quas, accusantium tempore consectetur et quam nesciunt ex praesentium nam.
   Deleniti harum natus temporibus quibusdam debitis nisi doloribus eligendi dignissimos nesciunt molestiae, reprehenderit facere amet? Ea accusantium aperiam quaerat hic, eveniet error culpa rem at qui. Maiores optio consequatur eaque.
   Minus corporis soluta laborum ea tempora cum itaque ullam qui? Architecto illum porro nobis perspiciatis nihil sed ullam amet obcaecati rerum veniam quod dicta aperiam consequuntur voluptatem, praesentium asperiores fugit.
@@ -121,6 +122,7 @@
   Odit minus adipisci libero iste inventore exercitationem veniam, illo delectus commodi voluptatibus dolores animi ea dolorem maiores, qui fugiat temporibus. Eos tenetur inventore animi dolores necessitatibus debitis. Tenetur, quae aliquid.
   Suscipit dolores ipsam excepturi sit amet sint laudantium enim neque quo quibusdam, mollitia veniam asperiores natus sunt fugit facilis, ipsa, quod aperiam. Id magni, pariatur facere ipsum tempora perferendis provident!
   shaikh saddam
+  </div>
 
 
   <!-- -----footer---- -->
