--- a/contact us.html
+++ b/contact us.html
@@ -112,7 +112,7 @@
   <!--------contact----  -->
 
 
-  <div class="row justify-content-evenly pt-2 pb-3  " id="contact" style="background-color: #f1f1f1;">
+  <div class="row justify-content-evenly pt-2 pb-3 p-3 " id="contact" style="background-color: #f1f1f1;">
     <div class="col-md-5 mt-5">
       <!-- -----forms--- -->
       <h3 class="mb-3">Contact Form</h3>
@@ -150,7 +150,7 @@
 
 
   <!-- -----footer---- -->
-  <div class="row justify-content-evenly bg-dark text-light pt-5 pb-5">
+  <div class="row justify-content-evenly bg-dark text-light pt-5 pb-5 p-3">
     <div class="col-md-3 pt-4">
       <h4 class="pb-2">Latest News</h4>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat dicta quo a temporibus quae provident
