--- a/about.html
+++ b/about.html
@@ -38,10 +38,10 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
           <ul class="navbar-nav menu-navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link " aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About Us</a>
+              <a class="nav-link active" href="about.html">About Us</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="services.html">Services</a>
@@ -109,6 +109,46 @@
     </div>
   </section>
 
+  <section class="about-section">
+    <div class="container">
+      <div class="about">
+        <h1>ABOUT INSTITUTE</h1>
+
+        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et numquam tempora recusandae voluptatum ipsa asperiores, iure expedita nisi debitis cupiditate magnam culpa ducimus sed consectetur possimus vero pariatur nesciunt modi!
+        Enim rerum est maiores quia nesciunt, incidunt sequi fugiat cum fuga eius voluptatum corrupti dolorem iusto quidem voluptas perferendis alias! Nisi odit molestias repellendus doloribus, provident aperiam expedita similique a.
+        Maxime nemo voluptas repudiandae libero esse fuga perferendis facere dolore quod delectus error fugiat, obcaecati ipsa culpa nulla soluta inventore qui quis tempore aperiam. Cupiditate animi voluptatibus id ipsa veniam?
+        Magni neque rerum laborum illum minus perspiciatis quibusdam enim exercitationem ducimus laboriosam officia illo sapiente reprehenderit incidunt accusamus, sequi in doloremque odio. Rem aliquam ab, voluptatibus quae distinctio velit vitae.
+        Quaerat ad perferendis eaque, dolores voluptatem facilis quae maiores similique doloremque reprehenderit. Soluta quasi rerum beatae a laborum architecto in omnis nisi minima libero eligendi tenetur ipsum, mollitia amet quaerat.</P>
+      </div>
+
+    </div>
+  </section>
+
+  <section class="gallery-section justify-content-evenly"> 
+    <div class="container">
+      <div class="photo-gallery">
+        <h1>Photo Gallery</h1>
+        <hr>
+        <div class="galery">
+          <div class="row justify-content-evenly">
+            <div class="col-md-3 col-lg-3">
+              <img src="img/1.jpg" alt="" style="width:100%">
+            </div>
+
+            <div class="col-md-3 col-lg-3">
+              <img src="img/2.jpg" alt="" style="width:100%">
+            </div>
+
+            <div class="col-md-3 col-lg-3">
+              <img src="img/3.jpg" alt="" style="width:100%">
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
 
   <!-- -----footer---- -->
   <div class="row justify-content-evenly bg-dark text-light pt-5 pb-5">
@@ -145,7 +185,7 @@
    <div class="row justify-content-evenly pt-2 pb-3  text-light" id="contact" style="background-color: #0d0808;">
     <div class="col-md-6 mt-5">
       <!-- -----forms--- -->
-      <h3 class="mb-3">Contact Form</h3>
+      <!-- <h3 class="mb-3">Contact Form</h3>
       <form>
         <div class="mb-3">
           <label for="name" class="form-label">Full Name</label>
@@ -165,11 +205,11 @@
       </form>
     </div>
    
-  </div>
+  </div> -->
   <!-- copyright -->
   <div class="row justify-content-evenly text-center pt-4 pb-4 text-light bg-secondary">
     <div class="col-md-10">
-      <p>Copyright 2018-2022 by SSK. All Rights Reserved. </p>
+      <p>Copyright 2022-2023 by Shaikh Saddam. All Rights Reserved. </p>
   
     </div>
   
