--- a/contact us.html
+++ b/contact us.html
@@ -38,7 +38,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
           <ul class="navbar-nav menu-navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link " aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html">About Us</a>
@@ -50,7 +50,7 @@
               <a class="nav-link" href="our team.html"> Our Team</a>
             </li>
             <li class="nav-item mt-3 mt-lg-0">
-              <a class="nav-link" href="contact us.html">Contact Us</a>
+              <a class="nav-link active" href="contact us.html">Contact Us</a>
             </li>
 
 
@@ -180,7 +180,7 @@
   <!-- copyright -->
   <div class="row justify-content-evenly text-center pt-4 pb-4 text-light bg-secondary">
     <div class="col-md-10">
-      <p>Copyright 2018-2022 by SSK. All Rights Reserved. </p>
+      <p>Copyright 2022-2023 by Shaikh Saddam. All Rights Reserved. </p>
   
     </div>
   
