--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
       <!-- copyright -->
       <div class="row justify-content-evenly text-center pt-4 pb-4 text-light bg-secondary">
         <div class="col-md-10">
-          <p>Copyright 2018-2022 by SSK. All Rights Reserved. </p>
+          <p>Copyright 2022-2023 by Shaikh Saddam. All Rights Reserved. </p>
       
         </div>
       
