--- a/services.html
+++ b/services.html
@@ -15,7 +15,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
-    <link rel="icon" href="img/logo.1.png">
+  <link rel="icon" href="img/logo.1.png">
   <style>
 
   </style>
@@ -38,16 +38,16 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
           <ul class="navbar-nav menu-navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link " aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="services.html">Services</a>
+              <a class="nav-link active" href="services.html">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="our team.html"> Our Team</a>
+              <a class="nav-link " href="our team.html"> Our Team</a>
             </li>
             <li class="nav-item mt-3 mt-lg-0">
               <a class="nav-link" href="contact us.html">Contact Us</a>
@@ -84,7 +84,7 @@
           <a href=""><img src="img/2.png" class="d-block w-100 img-fluid" alt="..."></a>
           <div class="carousel-caption d-none d-sm-block">
             <h5 class="text-danger " style="font-size: 30px; font-weight: bold;">SSK WEB DEVEOPMENT INSTITUTE</h5>
-            <p  class="text-primary">CENTRAL GOVERNMENT TRAINING INSTITUTE</p>
+            <p class="text-primary">CENTRAL GOVERNMENT TRAINING INSTITUTE</p>
           </div>
         </div>
         <div class="carousel-item">
@@ -125,34 +125,35 @@
       <a href="contact us.html" class="link-light text-decoration-none">Contact Us </a><br>
       <a href="our team.html" class="link-light text-decoration-none">Our Team</a><br>
       <a href="services.html" class="link-light text-decoration-none">Services</a><br>
-      
+
     </div>
     <div class="col-md-3 pt-4">
       <h4 class="pb-2">Quick Contact</h4>
-      <span><i class="fa fa-home pe-3 hover-primary" ></i></span>
+      <span><i class="fa fa-home pe-3 hover-primary"></i></span>
       <span>ssk Building Above Back of SBI Opposite TO Pune Station Rd, Pune, Maharashtra 11005</span><br>
-       <span><i class="fa fa-phone pe-3">
-       </i></span>
-       <span>+91-9067869487</span><br>
-       <a href="" class="link-light text-decoration-none"><span><i class="fa-solid fa-envelope pe-3"></i> </span><span class="">shaikhsaddamssk@gmail.com</span>
-       </a>
+      <span><i class="fa fa-phone pe-3">
+        </i></span>
+      <span>+91-9067869487</span><br>
+      <a href="" class="link-light text-decoration-none"><span><i class="fa-solid fa-envelope pe-3"></i> </span><span
+          class="">shaikhsaddamssk@gmail.com</span>
+      </a>
     </div>
   </div>
   <!-- copyright -->
   <div class="row justify-content-evenly text-center pt-4 pb-4 text-light bg-secondary">
     <div class="col-md-10">
-      <p>Copyright 2018-2022 by SSK. All Rights Reserved. </p>
-  
+      <p>Copyright 2022-2023 by Shaikh Saddam. All Rights Reserved. </p>
+
     </div>
-  
+
   </div>
 
 
   <!-- container end -->
 
-</div>
+  </div>
 
-</section>
+  </section>
 
 
 </body>
