--- a/contact us.html
+++ b/contact us.html
@@ -44,7 +44,7 @@
               <a class="nav-link" href="about.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="services.html">Services</a>
+              <a class="nav-link" href="services.html">Course</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="our team.html"> Our Team</a>
@@ -163,7 +163,7 @@
       <a href="about.html" class="link-light text-decoration-none">About Us</a><br>
       <a href="contact us.html" class="link-light text-decoration-none">Contact Us </a><br>
       <a href="our team.html" class="link-light text-decoration-none">Our Team</a><br>
-      <a href="services.html" class="link-light text-decoration-none">Services</a><br>
+      <a href="services.html" class="link-light text-decoration-none">Course</a><br>
       
     </div>
     <div class="col-md-3 pt-4">
